# vibe-kb

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/specs/: 2026-04-15-llm-knowledge-base-design.md
docs/superpowers/plans/: 2026-04-15-vibe-kb-mvp.md
skills/: kb-add-source.md  kb-compile.md  kb-create.md  kb-health-check.md  kb-research.md
src/vibe_kb/: __init__.py  cli.py  config.py  health.py  search.py
src/vibe_kb/add/: arxiv.py  epub.py  images.py  url.py  youtube.py
src/vibe_kb/utils/: files.py
tests/: conftest.py  test_cli_create.py  test_cli_stats.py  test_config.py  test_health.py  test_properties.py  test_search.py
tests/test_add/: test_arxiv.py  test_arxiv_images.py  test_epub.py  test_images.py  test_url.py  test_youtube.py
tests/test_utils/: test_files.py
