[project]
name = "vibe-kb"
version = "0.1.0"
description = "LLM-powered knowledge base system"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "ebooklib>=0.18",
    "yt-dlp>=2024.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
kb = "vibe_kb.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "hypothesis>=6.152.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
